<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>MoteurLite</name>
    <groupId>fr.insalyon.creatis</groupId>
    <artifactId>moteurlite</artifactId>
    <version>${revision}${sha1}${changelist}</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>21</maven.compiler.target>
        <maven.compiler.source>21</maven.compiler.source>
        <gasw.version>4.0</gasw.version>
        <grida.version>3.1.0</grida.version>
        <boutiques-model.version>1.1</boutiques-model.version>
        <revision>1.3.0</revision>
        <changelist>-SNAPSHOT</changelist>
        <sha1 />
    </properties>

    <licenses>
        <license>
            <name>CeCILL-B, Version 1.0</name>
            <url>http://www.cecill.info/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>CREATIS</name>
        <url>http://www.creatis.insa-lyon.fr/</url>
    </organization>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>fr.insalyon.creatis.moteurlite.MoteurLite</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>fr.insalyon.creatis</groupId>
            <artifactId>gasw</artifactId>
            <version>${gasw.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>fr.insalyon.creatis</groupId>
            <artifactId>moteur2-workflowsdb-common</artifactId>
            <version>2.1.0</version>
        </dependency>
        <dependency>
            <groupId>fr.insalyon.creatis</groupId>
            <artifactId>grida-standalone</artifactId>
            <version>${grida.version}</version>
        </dependency>
        <dependency>
            <groupId>fr.insalyon.creatis</groupId>
            <artifactId>boutiques-model</artifactId>
            <version>${boutiques-model.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.1.2</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.0</version>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.6.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>creatis</id>
            <name>Creatis Insa Lyon repository [creatis]</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/public</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>creatis-releases</id>
            <name>Internal Releases</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/releases</url>
        </repository>
        <snapshotRepository>
            <id>creatis-snapshots</id>
            <name>Internal Snapshots</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
